# ComputerEngineering

./: .gitignore  README.md
ScribeSync/: README.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
ScribeSync/app/: build.gradle.kts  proguard-rules.pro
ScribeSync/app/src/main/: AndroidManifest.xml
ScribeSync/app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
ScribeSync/app/src/main/cpp/whisper.cpp/: whisper.cpp  whisper.h
ScribeSync/app/src/main/cpp/whisper.cpp/ggml/src/ggml-cpu/llamafile/: sgemm.cpp
ScribeSync/app/src/main/java/com/scribesync/scribesync/: MainActivity.kt  ScribeSyncApplication.kt
ScribeSync/app/src/main/java/com/scribesync/scribesync/data/: AppDatabase.kt  DateConverters.kt  Meeting.kt  MeetingDao.kt  TagsConverter.kt  TranscriptMetadata.kt  TranscriptRepository.kt
ScribeSync/app/src/main/java/com/scribesync/scribesync/engine/: WhisperEngine.kt
ScribeSync/app/src/main/java/com/scribesync/scribesync/navigation/: NavGraph.kt
ScribeSync/app/src/main/java/com/scribesync/scribesync/service/: AudioCaptureService.kt
ScribeSync/app/src/main/java/com/scribesync/scribesync/ui/screens/: CalendarScreen.kt  HomeScreen.kt  MeetingDetailScreen.kt  RecordingScreen.kt
ScribeSync/app/src/main/java/com/scribesync/scribesync/ui/theme/: Color.kt  Theme.kt  Type.kt
ScribeSync/app/src/main/java/com/scribesync/scribesync/ui/viewmodel/: MeetingViewModel.kt
ScribeSync/app/src/main/java/com/scribesync/scribesync/util/: LocationHelper.kt  NetworkObserver.kt  SummaryService.kt
ScribeSync/app/src/main/java/com/scribsync/scribsync/: MainActivity.kt
ScribeSync/app/src/main/java/com/scribsync/scribsync/data/: Meeting.kt  MockData.kt  PdfExporter.kt
ScribeSync/app/src/main/java/com/scribsync/scribsync/navigation/: NavGraph.kt
ScribeSync/app/src/main/java/com/scribsync/scribsync/ui/screens/: HomeScreen.kt  MeetingDetailScreen.kt  RecordingScreen.kt
ScribeSync/app/src/main/java/com/scribsync/scribsync/ui/theme/: Color.kt  Theme.kt  Type.kt
ScribeSync/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
ScribeSync/app/src/main/res/values/: strings.xml  themes.xml
ScribeSync/gradle/: libs.versions.toml
docs/: team-contract.md
docs/meetings/: meeting1.md  meeting2.md  meeting3.md  meeting4.md  meetings-summary.md
docs/meetings/meeting-minutes/: week4-meeting.md
